--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,5 +24,5 @@ steps:
 
   # Docker push to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push',  'gcr.io/$PROJECT_ID/florian/eligiblity-service:latest']
+    args: ['push',  'gcr.io/$PROJECT_ID/<yourname>/eligiblity-service:latest']
 timeout: 3600s
