Use prebuilt image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "8100:8100"
   jupyter:
-    build: ./services/support/jupyter
+    image: fluescher/jupyter
     ports:
       - "8888:8888"
     volumes:
