--- a/pipeline/requirements-train.txt
+++ b/pipeline/requirements-train.txt
@@ -1,5 +1,5 @@
-imbalanced-learn
-scikit-learn
-numpy
-pandas
-joblib
+imbalanced-learn==0.7.0
+scikit-learn==0.23.2
+numpy==1.20.2
+pandas==1.2.4
+joblib==1.0.1
