--- a/services/support/jupyter/requirements.txt
+++ b/services/support/jupyter/requirements.txt
@@ -1,8 +1,8 @@
 scikit-learn=0.23.2
-matplotlib
-numpy
+matplotlib=3.4.1
+numpy=1.20.2
 graphviz
-pandas
-seaborn
-imbalanced-learn
+pandas=1.2.4
+seaborn=0.11.1
+imbalanced-learn=0.7.0
 mlflow=1.13
