--- a/setup/grafana-ingress.yml
+++ b/setup/grafana-ingress.yml
@@ -8,7 +8,7 @@ spec:
   - http:
       paths:
       - path: /*
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: seldon-core-analytics-grafana
