--- a/pipeline/frontend.yml
+++ b/pipeline/frontend.yml
@@ -36,13 +36,15 @@ spec:
       targetPort: 8000
   type: ClusterIP
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sustaino-load-balancer
 spec:
-  backend:
-    serviceName: frontend-service
-    servicePort: 8000
+  defaultBackend:
+    service:
+      name: frontend-service
+      port:
+        number: 8000
 
 
