--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "9000:9000"
   jupyter:
-    image: fluescher/jupyter
+    build: ./services/support/jupyter
     ports:
       - "8888:8888"
     volumes:
