Don't use -slim images

--- a/services/eligibility/Dockerfile
+++ b/services/eligibility/Dockerfile
@@ -2,10 +2,10 @@ FROM python:3.7
 
 COPY . /app
 WORKDIR /app
+RUN echo "test" > /tmp/test.txt
 RUN pip install -r requirements.txt
 
-
-ENV MODEL_NAME PostProcess
+ENV MODEL_NAME EligibilityModel
 ENV SERVICE_TYPE MODEL
 ENV PERSISTENCE 0
 
