--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,7 +15,7 @@ steps:
   # Docker Build
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 
-           'gcr.io/$PROJECT_ID/<yourname>/eligiblity-service:latest', './services/eligibility']
+           'gcr.io/$PROJECT_ID/<yourname>/eligibility-service:latest', './services/eligibility']
 
   # Docker push to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
