--- a/services/dummy/requirements.txt
+++ b/services/dummy/requirements.txt
@@ -1,8 +1,15 @@
-scikit-learn==1.0.2
-seldon-core==1.8.0
-joblib==1.2.0
-
-Jinja2==3.0.3
-itsdangerous==2.0.1
-Flask==1.1.1
-werkzeug==2.0.3
+blinker==1.9.0
+click==8.3.1
+Flask==3.1.2
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.2
+MarkupSafe==3.0.3
+numpy==2.3.5
+packaging==25.0
+prometheus_client==0.23.1
+scikit-learn==1.7.2
+scipy==1.16.3
+threadpoolctl==3.6.0
+Werkzeug==3.1.3
