--- a/services/support/jupyter/Dockerfile
+++ b/services/support/jupyter/Dockerfile
@@ -1,14 +1,18 @@
-FROM jupyter/scipy-notebook:python-3.7
+FROM quay.io/jupyter/scipy-notebook:python-3.13
 
 # RUN apt-get update && apt-get install graphwiz
 
-COPY requirements.txt .
-RUN conda install --file requirements.txt -y
+
+# RUN conda install --file requirements.txt -y
 
 RUN pip install 'dvc[gs]'
+
 
 RUN wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-412.0.0-linux-x86_64.tar.gz && \
     tar -xzf google-cloud-cli-412.0.0-linux-x86_64.tar.gz && rm google-cloud-cli-412.0.0-linux-x86_64.tar.gz && \
     ./google-cloud-sdk/install.sh --quiet && \
     echo "source '/home/jovyan/google-cloud-sdk/path.bash.inc'" >> /home/jovyan/.bashrc  && \
     ./google-cloud-sdk/bin/gcloud components install kubectl --quiet
+
+COPY requirements.txt .
+RUN pip install -r requirements.txt
