--- a/services/support/mlflow/Dockerfile
+++ b/services/support/mlflow/Dockerfile
@@ -1,5 +1,7 @@
-FROM python:3.10-buster
+FROM python:3.13
 
-RUN pip install -Iv mlflow==2.1.1
+RUN pip install -Iv mlflow==3.6.0
 
-ENTRYPOINT ["mlflow", "server", "-p", "5500", "-h", "0.0.0.0", "--default-artifact-root",  "./artifacts", "--backend-store-uri", "sqlite:///mlflow.db"]
+ENV MLFLOW_SERVER_ALLOWED_HOSTS *
+
+ENTRYPOINT ["mlflow", "server", "-p", "5500", "--host", "0.0.0.0", "--allowed-hosts", "*", "--default-artifact-root",  "/tmp/artifacts", "--backend-store-uri", "sqlite:///mlflow.db"]
