--- a/services/support/jupyter/requirements.txt
+++ b/services/support/jupyter/requirements.txt
@@ -1,8 +1,6 @@
-scikit-learn=1.0.2
-matplotlib=3.4.1
-numpy=1.20.2
-graphviz
-pandas=1.2.4
-seaborn=0.11.1
-imbalanced-learn=0.7.0
-mlflow=1.13
+numpy==2.3.5
+scikit-learn==1.7.2
+scipy==1.16.3
+joblib==1.5.2
+imbalanced-learn==0.14.0
+mlflow==3.6.0
