--- a/pipeline/eligibility-service.yml
+++ b/pipeline/eligibility-service.yml
@@ -13,12 +13,15 @@ spec:
     metadata:
       labels:
         app: eligibility-service
+        monitor: "true"
     spec:
       containers:
-        - name: frontend
-          image: fluescher/sustaino-dummy-service
+        - name: eligibility
+          image: fluescher/sustaino-dummy-service:flask
           ports:
-            - containerPort: 9000
+            - name: web
+              containerPort: 9000
+
 ---
 kind: Service
 apiVersion: v1
@@ -32,5 +35,3 @@ spec:
       port: 9000
       targetPort: 9000
   type: ClusterIP
-
-
