--- a/setup/prometheus-ingress.yml
+++ b/setup/prometheus-ingress.yml
@@ -2,15 +2,15 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: prometheus-ingress
-  namespace: seldon-monitoring
+  namespace: monitoring
 spec:
   rules:
-  - http:
-      paths:
-      - path: /*
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: seldon-monitoring-prometheus
-            port:
-              number: 9090
+    - http:
+        paths:
+          - path: /*
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: prometheus-operated
+                port:
+                  number: 9090
