Pin dummy image version

--- a/pipeline/eligibility-service.yml
+++ b/pipeline/eligibility-service.yml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
         - name: eligibility
-          image: fluescher/sustaino-dummy-service
+          image: fluescher/sustaino-dummy-service:2025-hs
+          imagePullPolicy: Always
           ports:
             - name: web
               containerPort: 9000
